[gd_scene load_steps=30 format=3 uid="uid://b5dbgblffncpv"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_p6uae"]
[ext_resource type="Texture2D" uid="uid://3alwm13wfcct" path="res://assets/Backgrounds/Background_Asset2.PNG" id="2_p6eyw"]
[ext_resource type="Texture2D" uid="uid://bikw8ol8vgfkl" path="res://assets/Props-Objects/Recyclable_Bin.PNG" id="3_ij1fl"]
[ext_resource type="Texture2D" uid="uid://dq7w3ydniulc8" path="res://assets/Props-Objects/Residual_Bin.PNG" id="4_6slpb"]
[ext_resource type="Texture2D" uid="uid://c87nvripx1ldl" path="res://assets/Props-Objects/Hazardous_Bin.PNG" id="5_2ws36"]
[ext_resource type="Texture2D" uid="uid://ccep4af6oigf7" path="res://assets/Backgrounds/BackgroundDesign_Asset.PNG" id="6_hme4m"]
[ext_resource type="Texture2D" uid="uid://c4qumlxt3kfhc" path="res://assets/Backgrounds/BackgroundDesign_Asset(1).PNG" id="7_ucan4"]
[ext_resource type="Texture2D" uid="uid://cg8qjwauvg6ha" path="res://assets/Heads-up Display/Arrow.PNG" id="8_eedo1"]
[ext_resource type="Texture2D" uid="uid://c5hch8a56wolr" path="res://assets/Heads-up Display/SortingTray_Asset.PNG" id="9_pmxoo"]
[ext_resource type="Texture2D" uid="uid://dqb5cks58no6g" path="res://assets/Heads-up Display/Placeholder_Asset.PNG" id="10_0tfa8"]
[ext_resource type="Texture2D" uid="uid://dtghce2231t4s" path="res://assets/Heads-up Display/Bar_Asset.PNG" id="11_oc6gx"]
[ext_resource type="Texture2D" uid="uid://cikthd0clc30f" path="res://assets/Heads-up Display/EasyPowerBar_Asset.PNG" id="12_b8vdy"]
[ext_resource type="FontFile" uid="uid://5kanbd1bjglj" path="res://Ranyth_upperlower.ttf" id="13_gba3p"]
[ext_resource type="Texture2D" uid="uid://dofcvcix0xjpg" path="res://assets/Buttons-Pop-up/UnclickedBack_Button.PNG" id="14_osujt"]
[ext_resource type="Texture2D" uid="uid://byxi1073tyol3" path="res://assets/Buttons-Pop-up/ClickedBack_Button.PNG" id="15_ti15o"]
[ext_resource type="Texture2D" uid="uid://bstx14ca771bt" path="res://assets/Panels/GameOver_Panel.PNG" id="16_rfprk"]
[ext_resource type="Script" path="res://scenes/game_over_control.gd" id="16_rsfgs"]
[ext_resource type="Texture2D" uid="uid://bdb82020guhlq" path="res://assets/Buttons-Pop-up/UnclickedLong_Button.PNG" id="17_0s8n7"]
[ext_resource type="Texture2D" uid="uid://beyo6spvk5nn0" path="res://assets/Buttons-Pop-up/ClickedLong_Button.PNG" id="18_in1j8"]
[ext_resource type="Texture2D" uid="uid://bggm1meqvn4j4" path="res://assets/Panels/YouWin_Panel.PNG" id="20_anb6q"]
[ext_resource type="Texture2D" uid="uid://cxwy5y6cidbn" path="res://assets/Panels/BigRectangle_Panel.PNG" id="21_2xpuo"]
[ext_resource type="Texture2D" uid="uid://bus1qfn7v0e7k" path="res://assets/Buttons-Pop-up/UnclickedCheck_Button (1).PNG" id="22_s3ma5"]
[ext_resource type="Texture2D" uid="uid://cdwfhdjudly30" path="res://assets/Buttons-Pop-up/ClickedCheck_Button (1).PNG" id="23_ufai7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s035w"]
texture = ExtResource("2_p6eyw")

[sub_resource type="LabelSettings" id="LabelSettings_2r2j8"]
font_size = 70
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1u62v"]
texture = ExtResource("16_rfprk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_akly2"]
texture = ExtResource("20_anb6q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_41r2u"]
texture = ExtResource("21_2xpuo")

[sub_resource type="LabelSettings" id="LabelSettings_kb4a6"]
font_size = 105
font_color = Color(0, 0, 0, 1)

[node name="Level1" type="Node2D"]
script = ExtResource("1_p6uae")

[node name="Panel" type="Panel" parent="."]
z_index = -5
offset_right = 1916.0
offset_bottom = 1075.0
theme_override_styles/panel = SubResource("StyleBoxTexture_s035w")

[node name="Bins" type="Node2D" parent="."]

[node name="RecyclableBin" type="Sprite2D" parent="Bins"]
position = Vector2(689, 291)
texture = ExtResource("3_ij1fl")

[node name="ResidualBin" type="Sprite2D" parent="Bins"]
position = Vector2(939, 290)
texture = ExtResource("4_6slpb")

[node name="HazardousBin" type="Sprite2D" parent="Bins"]
position = Vector2(1184, 290)
texture = ExtResource("5_2ws36")

[node name="BackgroundDesignAsset" type="Sprite2D" parent="Bins"]
z_index = -3
position = Vector2(936.125, 390.75)
scale = Vector2(1.85212, 2.23438)
texture = ExtResource("6_hme4m")

[node name="BackgroundDesignAsset(1)" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(963, 760.5)
scale = Vector2(0.936523, 0.62207)
texture = ExtResource("7_ucan4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1921.0
offset_bottom = 1082.0
pivot_offset = Vector2(2114, 1195)

[node name="Arrow" type="Sprite2D" parent="Control"]
position = Vector2(696, 570)
texture = ExtResource("8_eedo1")

[node name="SortingTrayAsset" type="Sprite2D" parent="."]
position = Vector2(1488, 937)
texture = ExtResource("9_pmxoo")

[node name="PlaceholderAsset" type="Sprite2D" parent="."]
position = Vector2(946, 966)
scale = Vector2(1.08333, 1.09028)
texture = ExtResource("10_0tfa8")

[node name="PowerBarIndicator" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(359, 979)
texture = ExtResource("11_oc6gx")

[node name="PowerBar" type="Sprite2D" parent="."]
position = Vector2(537, 981)
texture = ExtResource("12_b8vdy")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 45.0
offset_top = 34.0
offset_right = 442.0
offset_bottom = 152.0
theme_override_colors/font_color = Color(0.298039, 0.282353, 0.278431, 1)
theme_override_fonts/font = ExtResource("13_gba3p")
text = "Score: "
label_settings = SubResource("LabelSettings_2r2j8")
vertical_alignment = 1
autowrap_mode = 3

[node name="TimerLabel" type="Label" parent="."]
offset_left = 1470.0
offset_top = 34.0
offset_right = 1867.0
offset_bottom = 152.0
theme_override_colors/font_color = Color(0.298039, 0.282353, 0.278431, 1)
theme_override_fonts/font = ExtResource("13_gba3p")
text = "Time: "
label_settings = SubResource("LabelSettings_2r2j8")
vertical_alignment = 1
autowrap_mode = 3

[node name="BackBtn" type="TextureButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 857.0
offset_right = 228.0
offset_bottom = 1081.0
grow_vertical = 0
texture_normal = ExtResource("14_osujt")
texture_pressed = ExtResource("15_ti15o")

[node name="GameOverControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("16_rsfgs")

[node name="GameOverPanel" type="Panel" parent="GameOverControl"]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 263.0
offset_top = 98.0
offset_right = 1636.0
offset_bottom = 810.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1u62v")

[node name="NewGameBtn" type="TextureButton" parent="GameOverControl/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = 166.5
offset_right = 236.5
offset_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("17_0s8n7")
texture_pressed = ExtResource("18_in1j8")
ignore_texture_size = true
stretch_mode = 3

[node name="NewGameLbl" type="Label" parent="GameOverControl/GameOverPanel/NewGameBtn"]
layout_mode = 0
offset_left = 24.0
offset_top = 17.0
offset_right = 420.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.784314, 0.835294, 0.360784, 1)
theme_override_fonts/font = ExtResource("13_gba3p")
theme_override_font_sizes/font_size = 70
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackBtn" type="TextureButton" parent="GameOverControl/GameOverPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 357.0
offset_top = -227.0
offset_right = 505.0
offset_bottom = -76.0
grow_vertical = 0
texture_normal = ExtResource("14_osujt")
texture_pressed = ExtResource("15_ti15o")
ignore_texture_size = true
stretch_mode = 0

[node name="YouWinControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1921.0
offset_bottom = 1075.0

[node name="YouWinPanel" type="Panel" parent="YouWinControl"]
z_index = 10
layout_mode = 0
offset_left = 263.0
offset_top = 92.0
offset_right = 1676.0
offset_bottom = 851.0
theme_override_styles/panel = SubResource("StyleBoxTexture_akly2")

[node name="BackBtn" type="TextureButton" parent="YouWinControl/YouWinPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 357.0
offset_top = -233.0
offset_right = 505.0
offset_bottom = -82.0
grow_vertical = 0
texture_normal = ExtResource("14_osujt")
texture_pressed = ExtResource("15_ti15o")
ignore_texture_size = true
stretch_mode = 0

[node name="NewGameBtn" type="TextureButton" parent="YouWinControl/YouWinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = 166.5
offset_right = 236.5
offset_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("17_0s8n7")
texture_pressed = ExtResource("18_in1j8")
ignore_texture_size = true
stretch_mode = 3

[node name="NewGameLbl" type="Label" parent="YouWinControl/YouWinPanel/NewGameBtn"]
layout_mode = 0
offset_left = 24.0
offset_top = 17.0
offset_right = 420.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.784314, 0.835294, 0.360784, 1)
theme_override_fonts/font = ExtResource("13_gba3p")
theme_override_font_sizes/font_size = 70
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjPanel" type="Panel" parent="."]
offset_left = 396.0
offset_top = 332.0
offset_right = 1481.0
offset_bottom = 732.0
theme_override_styles/panel = SubResource("StyleBoxTexture_41r2u")

[node name="TitleLbl" type="Label" parent="ObjPanel"]
layout_mode = 0
offset_left = 81.0
offset_top = 34.0
offset_right = 1002.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0.298039, 0.282353, 0.278431, 1)
theme_override_fonts/font = ExtResource("13_gba3p")
theme_override_font_sizes/font_size = 8
text = "TRASH ROOKIE"
label_settings = SubResource("LabelSettings_kb4a6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ObjLbl" type="Label" parent="ObjPanel"]
layout_mode = 0
offset_left = 229.0
offset_top = 194.0
offset_right = 490.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_gba3p")
theme_override_font_sizes/font_size = 46
text = "Objective"
autowrap_mode = 3

[node name="ObjLbl2" type="Label" parent="ObjPanel"]
layout_mode = 0
offset_left = 218.0
offset_top = 252.0
offset_right = 897.0
offset_bottom = 329.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_gba3p")
theme_override_font_sizes/font_size = 31
text = "To win this round, accumulate 100 points within the given time"
autowrap_mode = 3

[node name="ClickedBtn" type="TextureButton" parent="ObjPanel"]
layout_mode = 0
offset_left = 910.0
offset_top = 279.0
offset_right = 1064.0
offset_bottom = 409.0
texture_normal = ExtResource("22_s3ma5")
texture_pressed = ExtResource("23_ufai7")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="GameOverControl/GameOverPanel/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="GameOverControl/GameOverPanel/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="YouWinControl/YouWinPanel/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="YouWinControl/YouWinPanel/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="ObjPanel/ClickedBtn" to="." method="_on_clicked_btn_pressed"]
